Added ability for a player to join the game

--- a/src/admin/client/static/index.html
+++ b/src/admin/client/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Click Wars</title>
+    <title>Click Wars Admin</title>
   </head>
   <body>
     <script src="/js/app.js"></script>
