Common scoreboard & winner controls

--- a/src/admin/client/static/index.html
+++ b/src/admin/client/static/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Click Wars Admin</title>
+    <link href="/css/app.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
     <script src="/js/app.js"></script>
