--- a/src/player/client/static/index.html
+++ b/src/player/client/static/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <title>Click Wars</title>
+    <link href="/css/app.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
     <script src="/js/app.js"></script>
